# vpn-daemon

./: .claudeignore  .flake8  .gitignore  README.md  pyproject.toml  vpn_daemon.spec
.claude/: config.json  instructions.md  memory.md  settings.local.json  tools.json
.claude/agents/: developer.md  planner.md  reviewer.md  tester.md
.claude/workflows/: feature-dev.md
.cursor/rules/: general.mdc
.github/workflows/: ci.yml  release.yml
config/: config.example.json
docs/: configuration.md  development.md  setup.md  task-scheduler.md  troubleshooting.md
scripts/: build.ps1  check-work-hours.ps1  connect.ps1  export.ps1  install.ps1  register-logon-task.ps1  run.ps1
src/helper/: otp.py  scan_totp_qr.py
src/vpn_daemon/: __init__.py  __main__.py  config.py  connect_manual.py  credentials.py  network.py  openvpn.py  otp.py  schedule.py  setup_wizard.py  state.py  tray_app.py  tray_click_feedback.py
tests/: test_config.py  test_openvpn.py  test_otp.py  test_platforms.py
