[project]
name = "vpn-daemon"
version = "0.1.0"
description = "Work-hours OpenVPN daemon with tray UI for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyotp>=2.9.0",
    "psutil>=6.0.0",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
helper = ["opencv-python-headless>=4.8"]

[project.scripts]
vpn-daemon = "vpn_daemon.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpn_daemon"]
